# dotfiles

./: .gitignore  README.md
dropbox/: install.sh
forticlient/: ,fctsslvpnhistory
gamepad/: 8bitdo-sn30-pro.gamecontroller.amgp  back.8bitdo.gamecontroller.amgp
gamepad/retropie/: README.txt
git/: ,gitconfig  ,gitignore  install.sh
hardware/: BOB.md
hardware/bob/: bob.md  motherboard.txt  ram.txt
hardware/gamepad/: README.md  (+2 more)
nu/: install.sh  known_good_versions.txt
pacman/: .install_root.sh.kate-swp  get_stack_aur.sh  install.sh  install_aur_helper.sh  install_aur_packages.sh  install_root.sh  install_user.sh  intall_aur_helper.sh  intall_stack_packages.sh  no_antergos.sh  pacman.conf  sort_mirrors.sh  yay.PKGBUILD
plasma/: install.sh  keyboard_shortcuts.conf  readme.txt
recovery/: pacman_crash.txt
sublime/: packages.txt
utils/: install.sh  say
xmonad/: Bash.hs  InfoBars.hs  Keys.hs  README.md  disable_xmonad.sh  enable_xmonad.sh  install.sh  update.sh  xmonad.hs
xmonad/my-xmonad/: Bash.hs  Daemons.hs  Hooks.hs  InfoBars.hs  Keys.hs  build  enable_with_plasma.txt  my-xmonad.cabal  stack.yaml  xmonad.hs
xmonad/my-xmonad/conky/: dropbox-down.sh  dropbox-files.sh  dropbox-up.sh  fsBar  sound  sysinfo_popup.sh  wifiBar  wifi_wlp2s0  wifi_wlp3s0
xmonad/my-xmonad/dzen2/: dzen2
xmonad/my-xmonad/lib/: Bash.hs  Hooks.hs  InfoBars.hs  Keys.hs
zsh/: ,zshrc  ,zshrc.basic  ,zshrc.sh  alias.cd.sh  alias.git.sh  alias.launch.sh  alias.sh  aliases  export.sh  exports  exports.sh  hosts.sh  init  init.sh  install.sh  nu.sh  uninstall.sh  utils  utils.sh
(+7 files in other folders)
