name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:       Bash
                     , InfoBars
                     , Keys
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , turtle
                     , mtl
                     , text
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -threaded
